@@ -124,6 +124,7 @@
      <li><a href="html/page_ApplyToRange.html">ApplyToRange</a></li>
      <li><a href="html/page_BaseRangeAlgo.html">BaseRangeAlgo</a></li>
      <li><a href="html/page_BinarySearch.html">BinarySearch</a></li>
+     <li><a href="html/page_SimpleRotate.html">SimpleRotate</a></li>
      <li><a href="html/page_EuclidRotate.html">EuclidRotate</a></li>
      <li><a href="html/page_CommonIntAlgo.html">CommonIntAlgo</a></li>
      <li><a href="html/page_GCDConst.html">GCDConst</a></li>
